# enrichpipe

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: blank.yml  build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: enrichPipe.doctree  enrichpipe.doctree  modules.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/enrichPipe/: alphabet_check.html  bleu_score.html
docs/_build/html/_modules/enrichpipe/: bleu_score.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt
docs/_build/html/_sources/source/: enrichPipe.rst.txt  modules.rst.txt
docs/_build/html/source/: enrichPipe.html  enrichpipe.html  modules.html
docs/source/: enrichPipe.rst  enrichpipe.rst  modules.rst
enrichPipe/: alphabet_check.py  bleu_score.py
enrichpipe/: alphabet_check.py  ner.py  word_count.py
tests/: test_alphabet_check.py  test_bleu_score.py  test_ner.py
