[tool.poetry]
name = "enrichpipe"
version = "0.1.10"
description = ""
authors = ["lara-imrsv <lara@imrsv.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lara-imrsv/enrichpipe"
repository = "https://github.com/lara-imrsv/enrichpipe"
documentation = "http://enrichpipe.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
seaborn = "^0.11.1"
sklearn = "^0.0"
python-semantic-release = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8.2"
ipykernel = "^5.5.0"
nltk = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "enrichpipe/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
